# gradescope-submit

./: #gradescope_submit.opam#  LICENSE  dune-project  gradescope_submit.opam
github/: dune  github.ml
gradescope/: #dune#  config.ml  config.mli  dune  gradescope.ml  gradescope_client.ml  gradescope_client.mli
terminal_utils/: dune  terminal_utils.ml  terminal_utils.mli
